# oblio

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  check.cpp
archive/: Makefile  Matrix_exp.cc  Matrix_exp.cpp  Matrix_exp.h  Matrix_ext.cpp  Matrix_ext.h  Matrix_tpl.h  MultiplyEngine_exp.cc  MultiplyEngine_exp.cpp  MultiplyEngine_exp.h  MultiplyEngine_ext.cc  MultiplyEngine_ext.cpp  MultiplyEngine_ext.h  MultiplyEngine_tpl.h  Vector_exp.cc  Vector_exp.cpp  Vector_exp.h  Vector_ext.cc  Vector_ext.cpp  Vector_tpl.h  oblio-new-devlog.md  oblio_modernization_appendix.md  oblio_modernization_notes.md  sparse_factorization.md  template_comparison.jsx  test09.cc  test09_complex.cc  test_multiply.cc  test_multiply.cpp  test_multiply_exp  test_multiply_ext  test_multiply_tpl
docs/: ARCHITECTURE.md  CODING_RULES.md  DESIGN_DECISIONS.md  DYNAMIC_LDL_SLICE2.md  PORTING_LEDGER.md  TESTING_SPECIFICATION.md  TODO.md  WRITING_RULES.md
examples/: basic.cc  basic.cpp  pipeline.cpp
experiments/friend-access/: Makefile  Matrix.cpp  Matrix.h  MultiplyEngine.cpp  MultiplyEngine.h  README.md  Vector.cpp  Vector.h  test_multiply.cpp
experiments/openmp/: Gemm.cpp  Gemm.h  Makefile  README.md  example_parallel.cpp  test_parallel.cpp
experiments/ordering/: Makefile  README.md  amd.cpp  amd.py  md1.cpp  md1.py  md2.cpp  md2.py  md3.cpp  md3.py  md4.cpp  md4.py  md5.cpp  md5.py  md6.cpp  md6.py  mmd.cpp  mmd.py
experiments/storage-options/: Makefile  MultiplyEngine.cpp  MultiplyEngine.h  README.md  SparseMatrixCsc.h  SparseMatrixDynamic.cpp  SparseMatrixDynamic.h  SparseMatrixStatic.cpp  SparseMatrixStatic.h  SparseMatrixVv.h  test_multiply.cpp
experiments/template-instantiation/: Makefile  MatrixGuardedExplicit.cpp  MatrixGuardedExplicit.h  MatrixImplicit.h  MatrixPlainExplicit.cpp  MatrixPlainExplicit.h  MultiplyEngineGuardedExplicit.cpp  MultiplyEngineGuardedExplicit.h  MultiplyEngineImplicit.h  MultiplyEnginePlainExplicit.cpp  MultiplyEnginePlainExplicit.h  README.md  VectorGuardedExplicit.cpp  VectorGuardedExplicit.h  VectorImplicit.h  VectorPlainExplicit.cpp  VectorPlainExplicit.h  test_multiply.cpp
include/oblio/: BlasLapack.h  DenseMatrix.h  DirectSolver.h  ElmForest.h  ElmForestEngine.h  FactorEngine.h  Factors.h  Matrix.h  NumFactorDynamic.h  NumFactorEngine.h  NumFactorStatic.h  OblioEngine.h  OrderEngine.h  Permutation.h  SolveEngine.h  SparseMatrix.h  SymFactor.h  SymFactorEngine.h  Symbolic.h  SymbolicEngine.h  Types.h  UpdateBlock.h  UpdateMatrix.h  Vector.h
port/: Makefile
port/include/oblio/: BlasLapack.h  ElmForest.h  ElmForestEngine.h  MultiplyEngine.h  NumFactorDynamic.h  NumFactorEngine.h  NumFactorStatic.h  OrderEngine.h  Permutation.h  SolveEngine.h  SparseMatrix.h  SymFact.h  SymFactEngine.h  SymFactor.h  SymFactorEngine.h  Types.h  Vector.h
port/src/: BlasLapack.cpp  ElmForestEngine.cpp  Mmd.cpp  MultiplyEngine.cpp  NumFactorDynamic.cpp  NumFactorEngine.cpp  OrderEngine.cpp  Permutation.cpp  SolveEngine.cpp  SparseMatrix.cpp  SymFactEngine.cpp  SymFactorEngine.cpp  UpdateBlock.cpp  Vector.cpp
port/tests/: smoke.cpp  test_forest.cpp  test_numfactor.cpp  test_order.cpp  test_permutation.cpp  test_symfact.cpp  test_symfactor.cpp  test_util.h
src/: Amd.cpp  BlasLapack.cpp  DenseMatrix.cc  DirectSolver.cpp  ElmForestEngine.cpp  FactorEngine.cc  Factors.cc  Matrix.cc  NumFactorEngine.cpp  NumFactorStatic.cpp  OblioEngine.cc  OrderEngine.cc  OrderEngine.cpp  Permutation.cpp  SolveEngine.cc  SolveEngine.cpp  SparseMatrix.cpp  SymFactorEngine.cpp  Types.cpp  UpdateMatrix.cpp  Vector.cc  Vector.cpp  test_pipeline.cpp
tests/: smoke.cpp  test_extended_complex.cc  test_extended_real.cc  test_forest.cpp  test_numfactor.cpp  test_order.cpp  test_pipeline.cpp  test_smoke_complex.cc  test_smoke_real.cc  test_solve.cpp  test_symfactor.cpp  test_util.h
